--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <header>
         <h1> hello world </h1>
     </header>
-    <video preload="" tabindex="-1" style="" src="https://player.vimeo.com/a5356447-00f9-4822-97df-3c89ec7b3eb8.mp4"></video>
+    
+    <img src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExMDZkZmYzOGNhNDE3NDE4M2RiNTQxMmUxMTM5YWZhYjVmZjdjMzA4NyZlcD12MV9pbnRlcm5hbF9naWZzX2dpZklkJmN0PWc/xT9IgzoKnwFNmISR8I/giphy.gif">
+
+
 </body>
 </html>
